<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/btn_home"
        android:iconTint="@color/colorPrimary"
        android:titleTextColor="@color/textPrimary"/>

    <item
        android:id="@+id/navigation_upcoming_event"
        android:icon="@drawable/baseline_event_24"
        android:title="@string/btn_upcoming"
        android:iconTint="@color/colorAccent"
        android:titleTextColor="@color/textSecondary"/>

    <item
        android:id="@+id/navigation_finished_event"
        android:icon="@drawable/baseline_event_available_24"
        android:title="@string/btn_finished"
        android:iconTint="@color/secondaryAccent"
        android:titleTextColor="@color/textPrimary"/>

</menu>
