<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="12dp"
    android:layout_marginTop="6dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="6dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp"
    android:background="?attr/selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_finished_event_photo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/img_desc_event_image"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:elevation="2dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_finished_event_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_finished_event_photo"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_finished_event_photo"
            card_view:layout_constraintTop_toTopOf="@+id/img_finished_event_photo"
            tools:text="@string/tittle_event"
            android:ellipsize="end"
            android:maxLines="2" />

        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_finished_event_photo"
            android:textSize="14sp"
            android:lineSpacingExtra="4dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_finished_event_photo"
            card_view:layout_constraintTop_toBottomOf="@id/tv_finished_event_name"
            tools:text="@string/text_description"
            android:maxLines="3"
            android:ellipsize="end" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
